<resources>
    <string name="app_name">Diário do bebê</string>

    <!-- Login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="msg_enter_email">Informe um email</string>
    <string name="msg_enter_valid_email">Informe um email válido</string>
    <string name="msg_enter_password">Informe uma senha</string>
    <string name="msg_enter_valid_password">Senha deve ter minimo 8 caracteres</string>
    <string name="hint_sign_in_google_login_button">Iniciar sessão com Google</string>
    <string name="tv_create_account">Criar conta</string>
    <string name="tv_forgot_password">Esqueci a senha</string>
    <string name="cb_remember_me">Lembrar-me</string>
    <string name="msg_login_fail">Falha ao realizar login</string>
    <string name="msg_success_register">Cadastro realizado com sucesso!</string>
    <string name="msg_fail_register">Falha ao cadastrar</string>
    <!-- Google Sign In -->
    <string name="msg_signin_success">signInResult:success -> %1$s.</string>
    <string name="msg_signin_firebase_fail">signInWithCredential Firebase:failure -> %1$s.</string>
    <string name="msg_signin_firebase_success">signInWithCredential Firebase:success</string>
    <string name="msg_signin_fail">signInResult:failed code= %1$s.</string>
    <string name="msg_signin_fail_snack_bar">Não foi possível efetuar login.</string>
    <string name="msg_signout_success">Logout with success</string>

    <!-- Register -->
    <string name="tv_full_name">Nome completo</string>
    <string name="prompt_confirm_password">Repita a senha</string>
    <string name="action_register">Cadastrar</string>
    <string name="tv_to_go_login">Já possui conta? Faça login</string>
    <string name="toolbar_title_register">Criar conta</string>
    <string name="msg_enter_name">Informe um nome</string>
    <string name="msg_password_not_match">Senhas não conferem</string>
    <string name="msg_unknown_error">Erro desconhecido, tente novamente</string>
    <string name="msg_auth_error">Ops, parece que sua sessão expirou, faça login novamente</string>
    <string name="msg_network_error">Erro ao conectar com o servidor, tente novamente</string>

    <!-- Forgot Password-->
    <string name="toolbar_title_forgot_password">Esqueci a senha</string>
    <string name="btn_reset_password">Enviar</string>
    <string name="tv_reset_password_instructions">Informe o email cadastrado para que possamos enviar o código de recuperação</string>
    <string name="tv_insert_code_instructions">Um código de recuperação foi enviado para seu email</string>
    <string name="et_recovery_code">Informe o código</string>
    <string name="btn_send_recovery_code">Verificar código</string>
    <string name="msg_fail_send_code_to_email">Falha ao enviar email</string>
    <string name="msg_verify_your_email">Verifique sua caixa de email</string>
    <string name="msg_enter_recovery_code">Informe um código</string>
    <string name="msg_enter_valid_recovery_code">Código deve ter minimo 6 caracteres</string>
    <string name="msg_fail_to_verify_recovery_code">Falha ao verificar código</string>

    <!-- Reset Password-->
    <string name="toolbar_title_register_new_password">Redefinir senha</string>
    <string name="btn_alter_password">@string/btn_save</string>
    <string name="tv_reset_password">Informe sua nova senha</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="msg_fail_to_reset_password">Falha ao redefinir senha</string>
    <string name="msg_password_reseted">Senha redefinida com sucesso</string>

    <string name="btn_save">Salvar</string>
    <string name="msg_save_successful">Salvo com sucesso</string>
    <string name="msg_delete_successful">Deletado com sucesso</string>
    <string name="btn_retry">Tentar novamente</string>

    <!-- FAQ-->
    <string name="toolbar_title_faq">FAQ</string>
    <string name="baby_tracker_question">O que é o Baby Tracker?</string>
    <string name="baby_tracker_response">Aplicativo que registra as principais atividades que envolvem os cuidados com um bebê em forma de diário.</string>
    <string name="register_question">Como registrar uma atividade?</string>
    <string name="register_response">Toque em uma atividade na barra de navegação inferior.</string>
    <string name="delete_register_question">Como deletar uma atividade?</string>
    <string name="delete_register_response">Toque no registro da atividade que aparece na lista e depois confirme a ação na janela de diálogo.</string>
    <string name="date_question">Como alternar entre os dias?</string>
    <string name="date_response">No topo da tela, toque nas setas para esquerda e direita ou sobre a data que aparece ao centro.</string>
    <string name="password_question">Esqueci a senha, como recuperar?</string>
    <string name="password_response">Na tela inicial, toque sobre o texto <b>Esqueci a senha</b> e siga as instruções.</string>

    <!-- Charts-->
    <string name="toolbar_title_charts">Análises</string>

    <!-- Baby -->
    <string name="tv_name">Nome</string>
    <string name="tv_birthday">Data de nascimento</string>
    <string name="tv_sex">Sexo</string>
    <string name="toolbar_title_add_baby">Adicionar bebê</string>
    <string name="toolbar_title_edit_baby">Editar bebê</string>
    <string name="tv_baby_photo">Adicionar foto do bebê</string>
    <string name="edit_baby_photo">Editar foto do bebê</string>
    <string name="msg_enter_sex">Informe o sexo</string>

    <!-- Main -->
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="empty_message">Adicione os registros de hoje</string>
    <string name="retry_message">Não foi possível comunicar com o servidor</string>
    <string name="date_between">%1$s Meses e %2$s Dias</string>
    <string name="before_born">Antes do nascimento</string>
    <string name="delete_register_title">Deletar registro</string>
    <string name="delete_register_message">Deseja deletar o registro %1$s das %2$s?</string>
    <string name="confirm_option">Sim</string>
    <string name="cancel_option">Cancelar</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.sgztech.babytracker</string>
    <string name="msg_store_app_not_found">Não foi possível abrir a play store.</string>

    <!-- Menu item drawer -->
    <string name="menu_item_registers">Registros</string>
    <string name="menu_item_chart">Análises</string>
    <string name="menu_item_logout">Sair</string>
    <string name="menu_item_title">Ajuda</string>
    <string name="menu_item_rate">Avaliar</string>
    <string name="menu_item_about">Sobre o app</string>

    <!-- Menu item bottom -->
    <string name="menu_item_feeding">Alimentação</string>
    <string name="menu_item_breast_feeding">Amamentação</string>
    <string name="menu_item_diaper">Fralda</string>
    <string name="menu_item_bathe">Banho</string>
    <string name="menu_item_baby_bottle">Mamadeira</string>
    <string name="menu_item_more">Outros</string>
    <string name="menu_item_colic">Cólica</string>
    <string name="menu_item_weight">Peso</string>
    <string name="menu_item_height">Altura</string>
    <string name="medical_appointment">Consulta</string>
    <string name="menu_item_nap">Soneca</string>
    <string name="menu_item_nail_cut">Corte unha</string>
    <string name="menu_item_reflux">Refluxo</string>
    <string name="menu_growing">Crescimento</string>

    <string name="weight_with_measure">Peso (kg)</string>
    <string name="height_with_measure">Altura (cm)</string>
    <string name="quantity_with_measure">Quantidade (ml)</string>

    <!-- Menu item toolbar -->
    <string name="menu_item_baby">Bebê</string>

    <string-array name="diaper_options">
        <item>Xixi</item>
        <item>Cocô</item>
        <item>Xixi e cocô</item>
    </string-array>

    <string-array name="feeding_options">
        <item>Amamentação</item>
        <item>Mamadeira</item>
    </string-array>

    <string-array name="sex_options">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>
</resources>