<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_tools"
            android:icon="@drawable/ic_app_registration_24"
            android:title="@string/menu_item_registers"/>
        <item android:id="@+id/nav_item_chart"
            android:icon="@drawable/ic_bar_chart_24"
            android:title="@string/menu_item_chart"/>
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_exit_to_app_24"
            android:title="@string/menu_item_logout"/>
    </group>
    <item android:title="@string/menu_item_title">
        <menu>
            <item android:id="@+id/nav_item_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_item_about"/>
        </menu>
    </item>
</menu>