<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FaqActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar" />

    <com.natura.android.expansionPanel.ExpansionPanel
        android:id="@+id/expansionPanelFirstQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        app:title="@string/baby_tracker_question">

        <TextView
            android:id="@+id/text_example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/baby_tracker_response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.natura.android.expansionPanel.ExpansionPanel>

    <com.natura.android.expansionPanel.ExpansionPanel
        android:id="@+id/expansionPanelSecondQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expansionPanelFirstQuestion"
        app:title="@string/register_question">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.natura.android.expansionPanel.ExpansionPanel>

    <com.natura.android.expansionPanel.ExpansionPanel
        android:id="@+id/expansionPanelThirdQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expansionPanelSecondQuestion"
        app:title="@string/delete_register_question">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_register_response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.natura.android.expansionPanel.ExpansionPanel>

    <com.natura.android.expansionPanel.ExpansionPanel
        android:id="@+id/expansionPanelFourthQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expansionPanelThirdQuestion"
        app:title="@string/date_question">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.natura.android.expansionPanel.ExpansionPanel>

    <com.natura.android.expansionPanel.ExpansionPanel
        android:id="@+id/expansionPanelQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expansionPanelFourthQuestion"
        app:title="@string/password_question">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password_response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.natura.android.expansionPanel.ExpansionPanel>


</androidx.constraintlayout.widget.ConstraintLayout>